mudança de algumas partes do código

--- a/templates/html/home.html
+++ b/templates/html/home.html
@@ -4,8 +4,8 @@
     <title> Home </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{{url_for('static',filename= 'css/css/site-01.css')}}" rel="stylesheet">
-    <img src="{{url_for('static', filename= 'img/Logo-lari.jpg')}}" alt="imagem de brigadeiro">
+    <link href="css/site-01.css" rel="stylesheet">
+    <img src="img/Logo-lari.jpg" alt="imagem de brigadeiro">
     <h1>Doce atelie </h1> 
   </head> 
   <body>
