--- a/static/css/site-01.css
+++ b/static/css/site-01.css
@@ -1,14 +1,69 @@
 body{
-  background-color: rgb(255, 255, 255);
+  background-color: #FAE4F6;
+
+}
+
+p{
+  font-size: 10pt;
+  color: rgb(130, 0, 0);
+}
+
+div.container1{
+  height: 10em;
+  display: flex;
+  align-items: left;
+
+}
+div.container1 button{
+  margin: 0;
+  height: 20%;
+  width: 10%;
+  position: absolute;
+  top:15%;
+  left:7%;
+  margin-right: -50%;
+  transform:translate(-50%,-50%);
+  font-size: 35pt; 
+  color: rgb(242, 99, 255);
+}
+div.container1 h1{
+  margin:0;
+  font-family:'Times New Roman', Times, serif;
+  position: absolute;
+  top:20%;
+  left:30%;
+  margin-right: -50%;
+  transform:translate(-50%,-50%);
+  font-size: 70pt; 
+  color: #601E00;
+} 
+
+
+
+
+
+
+
+div.container3 {
+  height: 10em;
+  position: relative;
+}
+
+div.container3 form{
+  text-align: right;
+  margin: 0;
+  background: #F5D0E9;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%,-50%);
 
 }
 
 
-h1{
-  font-family:'Times New Roman', Times, serif; 
-  font-size: 30pt; 
-  color: rgb(242, 99, 255);
-} 
+
+
 
 button{
   background-color: rgb(252, 211, 236);
@@ -18,8 +73,7 @@ button{
 }
 
 img{
-  width: 25%;
-  height: 25%;
-
+  width: 15%;
+  height: 15%;
 
 }
