--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -8,7 +8,7 @@
   </head>
   <body>  
       <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #FBB0F1;">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/", >
           <img src="static/img/Logo-brigadeiro.jpg" alt="imagem de brigadeiro" style="height: 20%;width: 20%;"> Doce Atelie
         </a>
         
@@ -31,6 +31,9 @@
             
             <li class="nav-item active">
               <a class="nav-link" href="/Contatos">Contatos <span class="sr-only">(página atual)</span></a>
+            </li> 
+            <li class="nav-item active">
+              <a class="nav-link" href="/entrar">Entrar <span class="sr-only">(página atual)</span></a>
             </li> 
           </li> 
         </ul>
