--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -1,61 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>Doce Atelie - um arte de confeitos </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,400;1,700&display=swap" rel="stylesheet"> 
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="/static/css/style-navbar.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/ccbbaff11d.js" crossorigin="anonymous"></script>
+
   </head>
-  <body>  
-      <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #FBB0F1;">
-        <a class="navbar-brand" href="/", >
-          <img src="static/img/Logo-brigadeiro.jpg" alt="imagem de brigadeiro" style="height: 20%;width: 20%;"> Doce Atelie
-        </a>
-        
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+  <body>
+    <header>
+      <div class="container" id="nav-container">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light " >
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links" 
+          aria-controls="navabar-links" aria-expanded="false" aria-label="Toggle-navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+          </button>
+            <a class="navbar-brand" href="/">
+              <img src="static/img/Logo-brigadeiro.jpg" alt="brigadeiro" style="height: 20%;width: 20%;" class="rounded-circle"> Doce Atelie
+            </a>
+          </button>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
+            <div class="navbar-nav">
+              <a href="nav-item nav-link" id="home-menu">Pagina inicial</a>
+              <a href="nav-item nav-link" id="about-menu">Sobre</a>
+              <a href="nav-item nav-link" id="services-menu">Produtos</a>
+              <a href="nav-item nav-link" id="contacts-menu">Contatos</a>
+              <a href="nav-item nav-link" id="login-menu">Entrar</a>
+            </div>
+          </div>
+          
 
-        <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Pagina inicial <span class="sr-only"> Pagina inicial </span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/Produtos">Produtos <span class="sr-only"></span></a>
-            </li>
-
-            <li class="nav-item active">
-              <a class="nav-link" href="/Sobre">Sobre <span class="sr-only">(página atual)</span></a>
-            </li>
-            
-            <li class="nav-item active">
-              <a class="nav-link" href="/Contatos">Contatos <span class="sr-only">(página atual)</span></a>
-            </li> 
-            <li class="nav-item active">
-              <a class="nav-link" href="/entrar">Entrar <span class="sr-only">(página atual)</span></a>
-            </li> 
-          </li> 
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-        </form>
+          <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/">Pagina inicial <span class="sr-only"> Pagina inicial </span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="/Produtos">Produtos <span class="sr-only"></span></a>
+                </li>
+  
+                <li class="nav-item active">
+                  <a class="nav-link" href="/Sobre">Sobre <span class="sr-only">(página atual)</span></a>
+                </li>
+                
+                <li class="nav-item active">
+                  <a class="nav-link" href="/Contatos">Contatos <span class="sr-only">(página atual)</span></a>
+                </li> 
+                <li class="nav-item active">
+                  <a class="nav-link" href="/entrar">Entrar <span class="sr-only">(página atual)</span></a>
+                </li> 
+              </li> 
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+            </form>
+          </div>
+        </nav>
       </div>
-    </nav>
-
-
-
-
-
-
-
-
-
-
+    </header>
+      
+      
 
       {% block conteudo %}
       {% endblock %}
-    </div>
   </body>
 </html>
