--- a/templates/html/home.html
+++ b/templates/html/home.html
@@ -2,26 +2,51 @@
     {%block conteudo%}  
     <main>
         <div class="container-fluid">
-                <div id="main_slider" class="carousel slide " data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#main_slider" data-slide-to="0" class="active"></li>
-                        <li data-target="#main_slider" data-slide-to="1"></li>
-                        <li data-target="#main_slider" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="/static/img/Foto-Brigadeiros1.png" alt="Brigadeiros">
+            <div id="main_Slider" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#main_Slider" data-slider-to="0" class="active"></li>
+                    <li data-target="#main_Slider" data-slider-to="1"></li>
+                    <li data-target="#main_Slider" data-slider-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/static/img/mulher-adoravel-lambe-os-labios-com-a-lingua-segura-dois-donuts-tem-bom-apetite-gosta-de-produtos-acucarados-antecipa-o-sabor-agradavel-tem-expressao-feliz.jpg" class="d-block w-100" 
+                        alt="Doces de ninho e Doce bichos de pé">
                         <div class="carousel-caption d-none d-md-block">
-                            <h2>Faça seu pedido!!!</h2>
-                            <p>Acesse nosso cardápio por aqui!</p>
-                            <a href="/Produtos" class="main-btn">Ver cardápio</a>
-                        </div>
-                        <img class="d-block w-100" src="/static/img/Foto-brigadeiros2.png">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2>Doces feitos com muito amor e carinho</h2>
+                            <h2>Vamos adoçar um pouco a vida ?</h2>
+                            <p>Somos especialistas em  proporciar momentos de felicidade,
+                                compre e experimente!!
+                            </p>
+                            <a href="/Produtos" class="main-btn"> Ver produtos </a>
                         </div>
                     </div>
-                </div>    
+                    <div class="carousel-item">
+                        <img src="/static/img/Foto-brigadeiros2-cut.png" class="d-block w-100" 
+                        alt="Brigadeiros e beijinhos em caixas ">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Escolha os doces!! </h2>
+                            <p>Veja as opções , e combine seus quatro doces favoritos!!</p>
+                            <a href="/Produtos" class="main-btn"> Ver produtos </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/static/img/Fotos-brigadeiros3-cut.png" class="d-block w-100" 
+                        alt="Brigadeiro de natal na mão de uma pessoa">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Esta procurando doces para festa?</h2>
+                            <p>Fazemos encomendas do cento!!</p>
+                            <a href="/Contatos" class="main-btn"> Entre em contato!! </a>
+                        </div>
+                    </div>
+                </div>
+                <a href="#main_Slider" class="carousel-control-prev" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a href="#main_Slider" class="carousel-control-next" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
     </main>
