--- a/templates/html/home.html
+++ b/templates/html/home.html
@@ -13,7 +13,7 @@
                         <img src="/static/img/mulher-adoravel-lambe-os-labios-com-a-lingua-segura-dois-donuts-tem-bom-apetite-gosta-de-produtos-acucarados-antecipa-o-sabor-agradavel-tem-expressao-feliz.jpg" class="d-block w-100" 
                         alt="Doces de ninho e Doce bichos de pé">
                         <div class="carousel-caption d-none d-md-block">
-                            <h2>Vamos adoçar um pouco a vida ?</h2>
+                            <h2>Que tal adoçar um pouco a vida ?</h2>
                             <p>Somos especialistas em  proporciar momentos de felicidade,
                                 compre e experimente!!
                             </p>
@@ -24,8 +24,8 @@
                         <img src="/static/img/Foto-brigadeiros2-cut.png" class="d-block w-100" 
                         alt="Brigadeiros e beijinhos em caixas ">
                         <div class="carousel-caption d-none d-md-block">
-                            <h2>Escolha os doces!! </h2>
-                            <p>Veja as opções , e combine seus quatro doces favoritos!!</p>
+                            <h2>Escolha os sabores!! </h2>
+                            <p>Fazemos a combinação perfeita para você!!!</p>
                             <a href="/Produtos" class="main-btn"> Ver produtos </a>
                         </div>
                     </div>
@@ -47,6 +47,31 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+            </div>
+            <div id="about-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="main-title">Sobre nós!!</h3>
+                        </div>
+                        <div class="col-md-6">
+                            <img  class="img-fluid" src="/static/img/confeitos-macarons-cut.jpg" alt=" Vitrine com Macarons">
+                        </div>
+                        <div class="col-md-6">
+                            <h3 class="about-title"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem esse culpa</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti saepe, eaque inventore laborum</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit, dolorem consequuntur doloremque </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti saepe, eaque inventore laborum</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit, dolorem consequuntur doloremque </p>
+                            <ul id="about-list">
+                                <li> <i class="fas fa-check"></i>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedi</li>
+                                <li> <i class="fas fa-check"></i>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedi</li>
+                                <li> <i class="fas fa-check"></i>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedi</li>
+                                <li> <i class="fas fa-check"></i>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedi</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
