--- a/templates/html/entrar.html
+++ b/templates/html/entrar.html
@@ -1,10 +1,35 @@
 {%extends 'html/base.html'%}
     {%block conteudo%}  
-    <form action="http://127.0.0.1:5000/login",name="name" method= "post">
-        <label for="text">LOGIN</label><br>    
-        <input type="text" name="name" placeholder="Digite seu nome" id="text"><br>    
-        <input type="text" name="password" placeholder="Digite a senha" id="text"><br>
-        <p>{{erro}}</p>      
-        <button type=""> Enviar </button>  
-    </form>
+    <div class="container" id="background">
+        <div class="container col-md-4 col-offset-md-3  " id="login-container" >
+            <div class=" container-fluid " id ="login-main-div">
+                <form  class="mx-auto" method="post">
+                    <h2>Login</h2>
+                    {{ form.csrf_token }}
+                    <div class="form-group">
+                        <label for="username">Email ou nome de usuário:</label>
+                        {{form.username(class='form-control', placeholder='Digite o seu Email ou nome de usuário')}}
+                        {% if form.errors.username%}
+                        <div class="alert alert-danger" role="alert">{{form.errors.username}}</div>
+                        {%endif%}
+                    </div> 
+                    <br>
+                    <div class="form-group">
+                        <label for="password">Digite sua senha:</label>
+                        {{form.password(class='form-control',placeholder="Senha")}}
+                        {% if form.errors.password%}
+                        <div class="alert alert-danger" role="alert">{{form.errors.password}}</div> 
+                        {%endif%}
+                    </div class="checkbox">
+                        <label for="">
+                            {{form.remember_me}} Lembrar de mim
+                        </label>
+                        <br>
+                        <button type="submit" class="btn btn-default"> Enviar </button>  
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    
     {%endblock%}
