--- a/app/static/css/styles-login.css
+++ b/app/static/css/styles-login.css
@@ -4,21 +4,24 @@
     
 }
 #login-main-div form {
-    width: 300px; 
-    height: 300px;
+    display: inline-block;
+    width: 450px; 
+    height: 350px;
     background-color:  #eeb7dc;
+    padding: 10px 20px;
+    border-radius: 30px
     
 }
 
 #backgound{
-    background-color: rgb(255, 207, 227);
+    background-color: rgb(255, 211, 240);
 
 }
 #login-main-div{
     width: 400px;
     height: 350px;
     padding-top: 15%;
-    background-color:  #eeb7dc;
+    background-color:  #58eb6b;
     padding: 10px 20px;
     border-radius: 30px;
 }
